--- a/RegisterOfFixAssets/RegisterOfFixAssets.csproj
+++ b/RegisterOfFixAssets/RegisterOfFixAssets.csproj
@@ -150,6 +150,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AssetsController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\DetailMasterController.cs" />
@@ -395,6 +396,7 @@
     <Content Include="Views\Transfer\ItemTransaction.cshtml" />
     <Content Include="Views\ValidationTest\Index.cshtml" />
     <Content Include="Views\ValidationTest\Messsage.cshtml" />
+    <Content Include="Views\Account\SignIn.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
