--- a/RegisterOfFixAssets/bin/RegisterOfFixAssets.dll.config
+++ b/RegisterOfFixAssets/bin/RegisterOfFixAssets.dll.config
@@ -21,7 +21,7 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   <authentication mode="Forms">
-    <forms loginUrl="Login/Login"></forms>
+    <forms loginUrl="Login/Create"></forms>
   </authentication>
   </system.web>
   <runtime>
